--- a/Controle_Casa.dproj
+++ b/Controle_Casa.dproj
@@ -153,7 +153,7 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="UPrincipal.pas">
-            <Form>Form1</Form>
+            <Form>FPrincipal</Form>
             <FormType>fmx</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
